--- a/Readme
+++ b/Readme
@@ -1,3 +1,95 @@
-**Healthcare Management Analytics**
+# Healthcare Management Analytics
 A data-driven healthcare analytics project built using SQL and Power BI to analyze hospital management data. The project aims to provide actionable insights into patient demographics, doctor performance, treatment trends, revenue generation, and overall hospital efficiency.
+
+# **Project Overview**
+- Created a Hospital Management Database with tables: Patients, Doctors, Appointments, Treatment, Billing.
+- Performed SQL queries to answer 25 business questions related to patients, doctors, treatments, appointments, and revenue.
+- Desiged a Power BI Dashboard to visualize KPIs and provided interactive insights.
+
+# **Dataset**
+Source: Kaggle
+Description: Contains data on patient, doctor, appointments, treatments, billing, and insurance.
+Note: This dataset is used for educational and analytical purposes.
+
+# **SQL Analysis**
+1: How many patients are registered in the hospital by gender?
+2: Age distribution of patients
+3: Insurance provider patients
+4: Top 10 patients who spent the most money
+5: Insurance provider with the highest claims (billed via insurance)
+6: Number of doctors per specialization
+7: Average years of experience by specialization
+8: Doctors per hospital branch
+9: Revenue per doctor
+10: Number of appointment per month
+11: Appointment status distribution
+12: Avg appointents per doctor
+13: Patients with most appointments
+14: Peak hours of appointments
+15: Doctor utilization rate
+16: Average waiting time between registration and first appointment
+17: Most common reason for visit
+18: Most common treatment type
+19: AVG treatment cost by type
+20: Treatments performed per month
+21: Tretament cost per hospital branch
+22: Whcih hospital branch generates the most revenue
+23: Total revenue by payment method
+24: Total revenue per month
+25: Pending or failed payments
+
+# SQL scripts are available in the       folder
+
+# **Power BI Dashboard**
+The dashboard highlights both KPIs and visuals for easy interpretation.
+**KPIs**  
+- Outstanding Revenue
+- Total Appointments
+- Total Patients
+- Collected Revenue
+
+**Slicers**
+- Quarter
+- Hospital Branch
+- Specialization
+- Insurance Provider
+- Payment Status
+
+**Visuals**
+- Payment Status → Donut Chart
+- Revenue Trend → Line Chart
+- Appointments by Specialization → Clustered Bar
+- Patient Demographics → Stacked Column
+- Revenue by Treatment Type → Clustered Bar
+- Revenue by Hospital Branch → Stacked Bar
+
+Dashboard screenshots are available in the     folder.
+
+# **Key Insights**
+- Gender and age distribution reveal patient demographics and trends.
+- Certain specializations generate significantly higher revenue.
+- Peak hours highlight optimal times for doctor utilization.
+- Revenue analysis shows best-performing branches.
+- Insurance providers play a critical role in billing and claims.
+
+# **How to Use**
+1. Run SQL queries: Navigate to     execute queries in your SQL environment,
+2. Power BI Dashboard: Download the .pbix file from the repo, open it in Power BI Desktop to explore interactive visuals.
+
+# **Tech Stack**
+- SQL → Data extraction & analysis
+- Power BI → Data visualization & dashboarding
+- Kaggle Dataset → Data source
+
+# Contact
+Email: t2000sisodia@gmail.com
+
+
+
+
+
+
+
+
+
 
