--- a/Readme
+++ b/Readme
@@ -74,7 +74,7 @@ Dashboard screenshots are available in the "Healthcare Dashboard.png" folder.
 
 # How to Use
 1. Run SQL queries: Navigate to "Healthcare sql.sql" execute queries in your SQL environment,
-2. Power BI Dashboard: Download the .pbix file from the repo, open it in Power BI Desktop to explore interactive visuals.
+2. Power BI Dashboard: Download the "Hospital dashboard.pbix" file from the repo, open it in Power BI Desktop to explore interactive visuals.
 
 # Tech Stack
 - SQL → Data extraction & analysis
